--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
-  "dependencies": {},
   "peerDependencies": {
+    "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -30,6 +30,7 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/react": "^5.3.18",
     "@svgr/rollup": "^5.3.1",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^25.2.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
@@ -41,6 +42,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
+    "classnames": "^2.2.6",
     "cssnano": "^4.1.10",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.2.1",
