--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "ignorePatterns": [
         "node_modules/",
-        "dist/"
+        "dist/",
+        "src/styles"
     ],
     "extends": [
         "plugin:@typescript-eslint/recommended",
