--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react-hooks": "^3.0.0",
     "jest": "^25.3.0",
     "postcss-cssnext": "^3.1.0",
+    "postcss-custom-properties": "^9.1.1",
     "postcss-import": "^12.0.1",
     "react": "^16.13.1",
     "react-docgen-typescript-loader": "^3.7.2",
