--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.2",
     "rollup-plugin-postcss": "^2.8.1",
+    "rollup-plugin-terser": "^5.3.0",
     "rollup-plugin-typescript2": "^0.27.0",
     "rollup-plugin-url": "^3.0.1",
     "ts-jest": "^25.4.0",
