--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "typings": "dist/index",
   "license": "MIT",
   "repository": "https://github.com/clickpick/clickui",
+  "homepage": "https://ui.clickpick.space",
   "scripts": {
     "start": "rollup -c -w",
     "build": "rollup -c",
