--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/storybook__addon-info": "^5.2.1",
     "@types/storybook__addon-knobs": "^5.2.1",
     "@types/storybook__react": "^5.2.1",
+    "@types/styled-components": "^5.1.0",
     "@typescript-eslint/eslint-plugin": "^2.28.0",
     "@typescript-eslint/parser": "^2.28.0",
     "awesome-typescript-loader": "^5.2.1",
@@ -75,5 +76,8 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "styled-components": "^5.1.1"
+  }
 }
